--- a/frontend/src/Notes.css
+++ b/frontend/src/Notes.css
@@ -1,4 +1,4 @@
-.notesContainer {
+#notesContainer {
   width: 48%;
   margin: 10px 10px;
   margin-left: 80px;
@@ -6,14 +6,14 @@
   height: 190px;
 }
 
-.notes {
+#notes {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
   margin-top: 5px;
   margin-left: 10px;
 }
 
-.text {
+#text {
   margin: 2px 10px;
   margin-top: 8px;
   font-size: 13px;
