--- a/frontend/src/VideoLibrary.css
+++ b/frontend/src/VideoLibrary.css
@@ -1,9 +1,25 @@
-.topContainer {
+#topContainer {
   float: left;
   margin: 20px 0px;
   margin-left: 95px;
-  width: 90%;
+  width: 80%;
   height: 50px;
+}
+
+#addBtn {
+  float: right;
+  margin-top: 5px;
+  margin-right: 10px;
+  width: 80px;
+  height: 35px;
+  background: rgb(0,127,102);
+  color: whitesmoke;
+  border-radius: 5px;
+  border: none;
+}
+
+#addBtn:hover {
+  cursor: pointer;
 }
 
 #videosContainer {
@@ -11,17 +27,19 @@
   margin: 0px;
   margin-left: 95px;
   width: 90%;
-
 }
 
 #title {
   margin: 10px;
   margin-left: 20px;
+  margin-right: 20px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 20px;
+  width: 20%;
+  float: left;
 }
 
 hr {
-  width: 90%;
+  width: 100%;
   margin: 0px;
 }
