--- a/frontend/src/VideoText.css
+++ b/frontend/src/VideoText.css
@@ -1,4 +1,4 @@
-.textContainer {
+#textContainer {
    margin: 10px 10px;
   margin-top: 25px;
   margin-right: 80px;
@@ -8,7 +8,7 @@
   border: 2px solid black;
 }
 
-.searchContainer {
+#searchContainer {
   width: 80%;
   height: 30px;
   margin: 13px auto;
@@ -19,7 +19,7 @@
   height: 20px
 }
 
-.subtitles {
+#subtitles {
   width: 93%;
   height: 80%;
   margin: 15px 15px;
