--- a/frontend/src/Header.css
+++ b/frontend/src/Header.css
@@ -1,6 +1,6 @@
 #header {
   width: 100%;
-  height: 50px;
+  height: 3rem;
   background: gainsboro;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 13px;
@@ -9,4 +9,8 @@
 
 #appName {
   margin-left: 15px;
+}
+
+h1 {
+  margin-top: 0px;
 }
