--- a/frontend/src/Video.css
+++ b/frontend/src/Video.css
@@ -1,19 +1,21 @@
 .videoInfo {
-  margin-left: 20px;
+  margin-left: 10px;
   width: 400px;
   height: 150px;
 }
 
 .img {
-  width: 210px;
-  height: 150px;
+  width: 240px;
+  height: 170px;
   border: 1px solid black;
+  margin: 10px;
 }
 
 h2 {
-  display: inline;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 20px;
+  margin-top: 15px;
+  margin-left: 0px;
 }
 
 #name:hover {
