--- a/frontend/src/VideoLibrary.css
+++ b/frontend/src/VideoLibrary.css
@@ -1,30 +1,46 @@
-#addBtn {
+#addBtn, .file-upload {
   float: right;
-  margin-top: 5px;
+  margin-top: 6px;
   margin-right: 10px;
-  width: 80px;
-  height: 35px;
+  width: fit-content;
+  height: fit-content;
+  text-align: center;
+  padding: 5px 10px;
+  padding-bottom: 8px;
   background: rgb(0,127,102);
   color: whitesmoke;
   border-radius: 5px;
   border: none;
 }
 
+
+input[type="file"] {
+    display: none;
+}
+
 #addBtn:hover {
   cursor: pointer;
 }
 
-.topContainer {
+.file-upload:hover {
+  cursor: pointer;
+}
+
+#topContainer {
+  float: left;
   margin: 20px 0px;
-  margin-left: 15px;
-  width: 90%;
+  margin-left: 105px;
+  width: 80%;
   height: 50px;
 }
 
 .videoTile {
     display: grid;
     grid-auto-flow: column dense;
-    width: fit-content;
+    width: 100%;
+    height: fit-content;
+    background: rgb(229,228,226);
+    border-radius: 8px;
 }
 
 #videosContainer {
@@ -38,7 +54,7 @@
   margin-left: 20px;
   margin-right: 20px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
+  font-size: 22px;
   width: 20%;
   float: left;
 }
