--- a/frontend/src/VideoLibrary.css
+++ b/frontend/src/VideoLibrary.css
@@ -29,33 +29,33 @@ input[type="file"] {
 #topContainer {
   float: left;
   margin: 20px 0px;
-  margin-left: 105px;
-  width: 80%;
+  width: 100%;
   height: 50px;
 }
 
 .videoTile {
-    display: grid;
-    grid-auto-flow: column dense;
-    width: 100%;
-    height: fit-content;
-    background: rgb(229,228,226);
-    border-radius: 8px;
+  display: grid;
+  grid-auto-flow: column dense;
+  grid-template-columns: min-content auto;
+  width: 100%;
+  height: fit-content;
+  margin: 10px 0px;
+  background: rgb(229,228,226);
+  border-radius: 8px;
 }
 
 #videosContainer {
   margin: 0px;
-  margin-left: 95px;
-  width: 90%;
+  width: 100%;
 }
 
 #title {
   margin: 10px;
   margin-left: 20px;
   margin-right: 20px;
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 22px;
-  width: 20%;
+  width: fit-content;
   float: left;
 }
 
