--- a/frontend/src/Video.css
+++ b/frontend/src/Video.css
@@ -4,11 +4,16 @@
   height: 150px;
 }
 
-.img {
+.thumbnail {
   width: 240px;
-  height: 170px;
+  height: auto;
   border: 1px solid black;
   margin: 10px;
+}
+
+.thumbnail img {
+  width: 100%;
+  height: 100%;
 }
 
 h2 {
