--- a/frontend/src/Notes.css
+++ b/frontend/src/Notes.css
@@ -4,6 +4,10 @@
   margin-left: 80px;
   border: 2px black solid;
   height: 190px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2rem;
 }
 
 #notes {
@@ -20,4 +24,23 @@
   width: 96%;
   height: 150px;
   /*overflow-y: scroll;*/
+}
+
+#addNote {
+  width: 25rem;
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: 1px rgb(151, 151, 151) solid;
+  margin-right: 10px;
+}
+
+#noteInput button {
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
 }
