--- a/frontend/src/VideoPlayerPage.css
+++ b/frontend/src/VideoPlayerPage.css
@@ -1,7 +1,11 @@
 #upper {
-  float: left;
-  height: 450px;
+  display: grid;
+  grid-auto-flow: column dense;
+  grid-template-columns: auto min-content;
+  grid-gap: 10px;
   width: 100%;
+  height: fit-content;
+  float: left;
 }
 
 #lower {
