--- a/frontend/src/VideoText.css
+++ b/frontend/src/VideoText.css
@@ -1,17 +1,19 @@
 #textContainer {
-   margin: 10px 10px;
-  margin-top: 25px;
-  margin-right: 80px;
-  width: 30%;
-  height: 400px;
-  float: right;
+  display: grid;
+  grid-auto-flow: row dense;
+  grid-template-rows: min-content auto;
+  grid-gap: 10px;
+  width: 400px;
+  height: auto;
+  margin: 5px;
   border: 2px solid black;
+  padding: 10px;
 }
 
 #searchContainer {
   width: 80%;
   height: 30px;
-  margin: 13px auto;
+  margin: 0px auto;
 }
 
 #searchBar {
@@ -20,9 +22,8 @@
 }
 
 #subtitles {
-  width: 93%;
-  height: 80%;
-  margin: 15px 15px;
+  width: 100%;
+  height: 100%;
   border: 1px solid black;
   overflow-y: scroll;
 }
