--- a/frontend/src/Header.css
+++ b/frontend/src/Header.css
@@ -1,16 +1,20 @@
 #header {
   width: 100%;
-  height: 3rem;
-  background: gainsboro;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 13px;
+  height: 3.5rem;
+  background: black;
+  font-family: Optima, sans-serif;
+  font-size: 14px;
+  font-style: oblique;
+  font-stretch: expanded;
+  font-weight: bold;
   margin: 0px;
+  padding-top: 10px;
+  color: gainsboro;
 }
 
 #appName {
-  margin-left: 15px;
-}
-
-h1 {
+  margin-left: 65px;
   margin-top: 0px;
+  margin-bottom: 10px;
+  padding-top: 5px;
 }
