--- a/frontend/src/VideoLibrary.css
+++ b/frontend/src/VideoLibrary.css
@@ -40,10 +40,13 @@ input[type="file"] {
   width: 100%;
   height: fit-content;
   margin: 10px 0px;
-  background: rgb(229,228,226);
+  background: rgba(229, 228, 226, 0.445);
   border-radius: 8px;
 }
 
+.videoTile:hover {
+  background: rgb(229,228,226);
+}
 #videosContainer {
   margin: 0px;
   width: 100%;
