--- a/frontend/src/Header.css
+++ b/frontend/src/Header.css
@@ -2,19 +2,35 @@
   width: 100%;
   height: 3.5rem;
   background: black;
-  font-family: Optima, sans-serif;
-  font-size: 14px;
-  font-style: oblique;
-  font-stretch: expanded;
-  font-weight: bold;
-  margin: 0px;
   padding-top: 10px;
-  color: gainsboro;
 }
 
 #appName {
+  font-family: Optima, sans-serif;
+  font-size: 30px;
+  font-style: oblique;
+  font-stretch: expanded;
+  font-weight: bold;
+  color: gainsboro;
+  text-decoration: none;
   margin-left: 65px;
   margin-top: 0px;
   margin-bottom: 10px;
   padding-top: 5px;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
 }
