Final date changes

--- a/frontend/src/VideoLibrary.css
+++ b/frontend/src/VideoLibrary.css
@@ -67,7 +67,7 @@ hr {
   margin: 0px;
 }
 
-.description {
-  text-decoration: none;
+#description {
+  text-decoration: none !important;
   color: black;
 }
