--- a/frontend/src/Video.css
+++ b/frontend/src/Video.css
@@ -31,8 +31,8 @@ h2 {
   cursor: pointer;
 }
 
-#description {
+/* #description {
   margin-left: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 13px;
-}
+} */
