--- a/frontend/src/Header.css
+++ b/frontend/src/Header.css
@@ -8,7 +8,7 @@
 #appName {
   font-family: Optima, sans-serif;
   font-size: 30px;
-  font-style: oblique;
+  /* font-style: oblique; */
   font-stretch: expanded;
   font-weight: bold;
   color: gainsboro;
