--- a/frontend/src/VideoText.css
+++ b/frontend/src/VideoText.css
@@ -6,24 +6,32 @@
   width: 400px;
   height: auto;
   margin: 5px;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   padding: 10px;
+  /* background: linear-gradient(to top right, #d1f8f8a6, rgba(245, 219, 214, 0.643)); */
 }
 
 #searchContainer {
   width: 80%;
   height: 30px;
   margin: 0px auto;
+  background: linear-gradient(to top right, #d1f8f8a6, rgba(245, 219, 214, 0.643));
+
 }
 
 #searchBar {
   width: 100%;
-  height: 20px
+  height: 20px;
+  border-radius: 4px;
+  border: 1px solid;
 }
 
 #subtitles {
-  width: 100%;
-  max-height: 500px;
-  border: 1px solid black;
+  padding: 1rem;
+  width: auto;
+  max-height: 600px;
+  border-radius: 10px;  
   overflow-y: scroll;
+  background:rgba(245, 244, 244, 0.643);
+  /* background: linear-gradient(to top right, #d1f8f852, rgba(245, 219, 214, 0.376)); */
 }
