--- a/frontend/src/VideoText.css
+++ b/frontend/src/VideoText.css
@@ -4,24 +4,21 @@
   grid-template-rows: min-content auto;
   grid-gap: 10px;
   width: 400px;
-  height: auto;
+  height: 500px;
   margin: 5px;
-  /* border: 2px solid black; */
+  margin-left: 15px;
   padding: 10px;
-  /* background: linear-gradient(to top right, #d1f8f8a6, rgba(245, 219, 214, 0.643)); */
 }
 
 #searchContainer {
   width: 80%;
   height: 30px;
   margin: 0px auto;
-  background: linear-gradient(to top right, #d1f8f8a6, rgba(245, 219, 214, 0.643));
-
 }
 
 #searchBar {
   width: 100%;
-  height: 20px;
+  height: 24px;
   border-radius: 4px;
   border: 1px solid;
 }
@@ -30,6 +27,7 @@
   padding: 1rem;
   width: auto;
   max-height: 600px;
+  font-size: 13px;
   border-radius: 10px;  
   overflow-y: scroll;
   background:rgba(245, 244, 244, 0.643);
