--- a/frontend/src/Annotation.css
+++ b/frontend/src/Annotation.css
@@ -1,8 +1,12 @@
+.annotation {
+  display: flex
+}
+
 .annotationMsg {
   margin-left: 10px;
 }
 
 .deleteButtonSpan {
-  float: right;
+  margin-left: auto;
   margin-right: 10px;
 }
