--- a/frontend/src/Annotation.css
+++ b/frontend/src/Annotation.css
@@ -8,6 +8,12 @@
   width: 90%;
   margin-left: 10px;
   overflow: hidden;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.annotationMsg:hover {
+  background: rgba(231, 231, 231, 0.411);
 }
 
 .deleteButtonSpan {
