--- a/frontend/src/VideoLibrary.css
+++ b/frontend/src/VideoLibrary.css
@@ -36,7 +36,7 @@ input[type="file"] {
 .videoTile {
   display: grid;
   grid-auto-flow: column dense;
-  grid-template-columns: min-content auto;
+  grid-template-columns: min-content auto min-content;
   width: 100%;
   height: fit-content;
   margin: 10px 0px;
