--- a/frontend/src/DeleteButton.css
+++ b/frontend/src/DeleteButton.css
@@ -1,7 +1,8 @@
 .deleteButton {
-  background-color: crimson;
+  background-color: rgb(227,38,54);
   border-radius: 3px;
   border: none;
+  margin-left: 5px;
   color: white;
   font-family: 'Open Sans', sans-serif;
 }
